--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ email_validator==2.2.0
 exceptiongroup==1.3.0
 fastapi==0.109.2
 h11==0.16.0
+httpx==0.27.0
 idna==3.10
 motor==3.3.2
 passlib==1.7.4
