--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "upvotezone-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
