--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,35 +1,22 @@
-annotated-types==0.7.0
-anyio==4.9.0
-bcrypt==4.3.0
-cffi==1.17.1
-click==8.2.1
-cryptography==45.0.4
+aiohttp==3.8.6
+aiosignal==1.3.2
+async-timeout==4.0.3
+attrs==25.3.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
 dnspython==2.7.0
-ecdsa==0.19.1
-email_validator==2.2.0
 exceptiongroup==1.3.0
-fastapi==0.109.2
-h11==0.16.0
-httpx==0.27.0
+frozenlist==1.7.0
 idna==3.10
-motor==3.3.2
-passlib==1.7.4
-prometheus-client==0.19.0
-pyasn1==0.6.1
-pycparser==2.22
-pydantic==2.11.5
-pydantic-settings==2.9.1
-pydantic_core==2.33.2
-pymongo==4.6.1
-python-dotenv==1.0.1
-python-jose==3.3.0
-python-json-logger==2.0.7
-python-multipart==0.0.9
-rsa==4.9.1
-six==1.17.0
-sniffio==1.3.1
-starlette==0.36.3
-structlog==24.1.0
-typing-inspection==0.4.1
-typing_extensions==4.14.0
-uvicorn==0.27.1
+iniconfig==2.1.0
+multidict==6.4.4
+packaging==25.0
+pluggy==1.6.0
+propcache==0.3.2
+pymongo==4.13.1
+pytest==8.3.5
+requests==2.32.3
+tomli==2.2.1
+typing_extensions==4.13.2
+urllib3==2.4.0
+yarl==1.20.1
