--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,22 +1,108 @@
-aiohttp==3.8.6
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
 aiosignal==1.3.2
-async-timeout==4.0.3
+annotated-types==0.7.0
+anyio==4.9.0
+async-timeout==5.0.1
+asyncio==3.4.3
 attrs==25.3.0
+bcrypt==4.3.0
+browserforge==1.2.3
+camoufox==0.4.11
 certifi==2025.4.26
+cffi==1.17.1
 charset-normalizer==3.4.2
+click==8.2.1
+cryptography==45.0.4
+curl_cffi==0.10.0
+Cython==3.1.0
+Deprecated==1.2.18
 dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
+emunium==2.1.0
 exceptiongroup==1.3.0
-frozenlist==1.7.0
+Faker==37.1.0
+fastapi==0.109.2
+frozenlist==1.6.0
+geoip2==5.1.0
+greenlet==3.2.1
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.27.0
+HumanCursor==1.1.5
+humanfriendly==10.0
 idna==3.10
-iniconfig==2.1.0
-multidict==6.4.4
-packaging==25.0
-pluggy==1.6.0
-propcache==0.3.2
-pymongo==4.13.1
-pytest==8.3.5
+keyboard==0.13.5
+language-tags==1.2.0
+lxml==5.4.0
+maxminddb==2.7.0
+motor==3.3.2
+MouseInfo==0.1.3
+mss==10.0.0
+multidict==6.4.3
+nodriver==0.45.2
+numpy==2.2.5
+opencv-python==4.11.0.86
+orjson==3.10.18
+outcome==1.3.0.post0
+passlib==1.7.4
+pillow==11.2.1
+platformdirs==4.3.8
+playwright==1.52.0
+prometheus-client==0.19.0
+propcache==0.3.1
+pyasn1==0.6.1
+PyAutoGUI==0.9.54
+pycparser==2.22
+pydantic==2.11.5
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
+pyee==13.0.0
+PyGetWindow==0.0.9
+pymongo==4.6.1
+PyMsgBox==1.0.9
+pyperclip==1.9.0
+PyRect==0.2.0
+PyScreeze==1.0.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-jose==3.3.0
+python-json-logger==2.0.7
+python-multipart==0.0.9
+python-socks==2.7.1
+python3-xlib==0.15
+pytweening==1.2.0
+pytz==2025.2
+PyVirtualDisplay==3.0
+PyYAML==6.0.2
 requests==2.32.3
-tomli==2.2.1
-typing_extensions==4.13.2
+rsa==4.9.1
+rubicon-objc==0.5.0
+screeninfo==0.8.1
+selenium==4.32.0
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+starlette==0.36.3
+structlog==24.1.0
+tqdm==4.67.1
+trio==0.30.0
+trio-websocket==0.12.2
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+tzdata==2025.2
+ua-parser==1.0.1
+ua-parser-builtins==0.18.0.post1
+undetected-chromedriver==3.5.5
 urllib3==2.4.0
-yarl==1.20.1
+uvicorn==0.27.1
+uvloop==0.21.0
+watchfiles==1.0.5
+websocket-client==1.8.0
+websockets==15.0.1
+wrapt==1.17.2
+wsproto==1.2.0
+yarl==1.20.0
