admin page added

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,4 @@ MONGODB_DB_NAME=upvote_db
 SECRET_KEY=your-super-secret-key-change-this-in-production
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 DEBUG=true
+ADMIN_EMAIL=admin@upvotezone.com
